--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <body ng-app="ToDoList">
         <!-- Modules -->
         <script src="/js/app.js"></script>
+
         <!-- Controllers -->
         <script src="/js/controllers/MainController.js"></script>
+
+        <!-- Directives -->
+        <script src="/js/directives/singlelist.js"></script>
+
         <h1>Welcome to AngularJS!</h1>
         <!-- <div ng-controller="MainController">
             <li>{{ list[0] }}</li>
@@ -17,23 +22,17 @@
         </div> -->
 
         <div ng-controller="MainController">
-            <h3>Todos!</h3>
-            <div ng-repeat="item in list">
-                <li>{{ item }}</li>
-            </div>
-            <br>
+            <singlelist mylist="todos"></singlelist>
+            <br>  
             <input type="text" ng-model="todoItem" name="Todo">
-            <button ng-click="addTodo()">Add Todo</button>
+            <button ng-click="addItem(todos.list, todoItem)">Add Todo</button>
         </div>
         
         <div ng-controller="MainController">
-            <h3>Books List</h3>
-            <div ng-repeat="book in books.list">
-                <li>{{ book }}</li>
-            </div>
+            <singlelist mylist="books"></singlelist>
             <br>
             <input type="text" name="bookItem" ng-model="bookItem">
-            <button ng-click="addBook(books.list, bookItem)">Add Book</button>
+            <button ng-click="addItem(books.list, bookItem)">Add Book</button>
         </div>
     </body>
 </html>
